* Make description on subscription line optional

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Check pending subscription to erase party

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)

Version 4.4.0 - 2017-05-01
* Initial release