@@ -1,3 +1,4 @@
+* Make start date of line required
 * Make description on subscription line optional
 
 Version 4.8.0 - 2018-04-23
